--- a/readme
+++ b/readme
@@ -1,1 +1,1 @@
-
+Message (1).Lua is the MAIN GUI, Please make sure to test all scripts in "Ownerguiasd" - Key: xeVWJhJNqx2xKGccmJjf, Before adding them to the main gui.
